--- a/css/styles.css
+++ b/css/styles.css
@@ -2,4 +2,63 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    background-color: aliceblue;
+    color: darkred;
+}
+
+span {
+    color: darkred;
+    font-weight: 600;
+    letter-spacing: 2px;
+    font-size: 1.2em;
+}
+
+#pane {
+    margin: 0 auto;    
+}
+
+td, tr {
+    border: 1px solid black;
+    width: 3px;
+    height: 3px;
+    background-color: white;
+}
+
+#color-picker {
+    background-color: antiquewhite;
+    width: 722px;
+    height: 50px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.color {
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    border: .5px solid black;
+}
+
+#red{background-color: red;}
+
+#orange{background-color: orange;}
+
+#yellow{background-color: yellow;}
+
+#green{background-color: green;}
+
+#cyan{background-color: cyan;}
+
+#blue{background-color: blue;}
+
+#violet{background-color: violet;}
+
+#picked-color {
+    width: 35px;
+    height: 20px;
+    border: .5px solid black;
+    background-color: white;
 }
