--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,9 @@ span {
     letter-spacing: 2px;
     font-size: 1.2em;
 }
+#container {
+    margin-top: 12px;
+}
 
 #pane {
     margin: 0 auto;    
@@ -21,32 +24,23 @@ span {
 .cell {
     border: .5px solid black;
     border-radius: 20%;
-    width: 6px;
-    height: 6px;
+    width: 9px;
+    height: 9px;
     margin: 1px;
 }
-
-/* tr, td {
-    border: .5px solid black;
-    border-collapse: collapse;
-    border-radius: 20%;
-    width: 5px;
-    height: 5px;
-    
-} */
 
 .row {
     display: flex;
     justify-content: center; 
     align-items: center;
-}
+} 
 
 #color-picker {
     display: flex;
     justify-content: space-around; 
     align-items: center;
     background-color: antiquewhite;
-    width: 722px;
+    width: 768px;
     height: 50px;
     margin: 0 auto;   
 }
@@ -91,12 +85,24 @@ span {
     background-color: white;
 }
 
+#buttons {
+    margin: 12px auto;
+    width: 768px;
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
+}
+
 #erace {
     border: .5px solid black;
-    border-radius: 3px;
-    width: 55px;
-    margin-top: 25px;
-    padding: 6px;
+    border-radius: 3px;        
+    padding: 6px;    
     background-color:darkred;
-    color: aliceblue;
+    color: aliceblue;   
+    margin-right: 18px; 
+}
+
+#custom-color-picker{
+    margin: 0 6px;
+    flex-basis: 50%;
 }
