--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ button {
     width: 35px;
     height: 20px;
     border: .5px solid black;
-    background-color: white;
+    background-color: black;
 }
 
 #buttons {
